--- a/slots.css
+++ b/slots.css
@@ -28,6 +28,15 @@ cursor: none;
     left: 1%;
 }
 
+/*Gameplay area*/
+#slotsArea {
+    width: 100%;
+    height: 57%;
+    position: absolute;
+    top: 17%;
+    left: 19%;
+}
+
 /*CSS for the auto play button*/
 #autoSpinButton {
     height: 13%;
@@ -115,3 +124,21 @@ cursor: none;
     background: url('./assets/images/ui/buttons/spin_pressed.png');
     background-size: 100% 100%;
 }
+
+#info {
+    position: absolute;
+    top: 20px;
+    left: 200px;
+    width: 100px;
+    text-align: left;
+    font-size: 9pt;
+    font-family: arial, helvetica, sans-serif;
+  }
+  
+  #credits {
+    font-size: 10pt;
+  }
+  
+  #log {
+    color: #666666;
+  }
