--- a/slots.css
+++ b/slots.css
@@ -1,10 +1,10 @@
-html,body {
+/* html,body {
     margin: 0;
     position: relative;
     width: 100%;
     height: 100%;
     background: #000;
-}
+} */
 
 canvas {
 margin: 0 auto;
